[fix] some gaps on checkout fixed

--- a/src/main/webapp/static/css/checkout.css
+++ b/src/main/webapp/static/css/checkout.css
@@ -29,14 +29,10 @@
     text-align: center;
     width: 40%;
     background-color: #50aa50;
-    border: 1px solid black;
     padding: 15px;
     text-transform: uppercase;
     font-weight: bolder;
-    margin: 6vh auto;
-    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
-    rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
-    rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+    margin: 10vh auto;
 }
 
 .sub-title {
@@ -45,7 +41,6 @@
 
 .cart-summary strong{
     color: white;
-    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 .container img {
@@ -91,10 +86,10 @@
 .confirmBtn {
     display: block;
     width: fit-content;
-    margin: 10px auto 20px;
+    margin: 50px auto 100px;
     padding: 10px 30px;
     font-weight: 600;
-    background: green;
+    background: #50aa50;
     color: white;
     transition: all ease-in 0.1s;
     border: 0;
@@ -104,4 +99,8 @@
 .confirmBtn:hover {
     opacity: 0.9;
     transform: scale(1.1);
+}
+
+.paymentCont {
+    margin-top: 60px;
 }
